tests/tooling/fixtures/native/recovery/negative/negative_for_parser_missing_body_statement.objc3
// Expected diagnostic code(s): O3P103.
module NegativeForParserMissingBodyStatement;

fn main() -> i32 {
  for (let i = 0; i < 1; i = i + 1)
}
